--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,12 @@ body {
   }
 }
 
+@media screen and (max-width: 900px) {
+  .export-form {
+    display: none !important;
+  }
+}
+
 main {
   display: flex;
   height: 100%;
